2000-12-01  Joseph S. Myers  <jsm28@cam.ac.uk>

	* gcc.dg/c99-array-nonobj-1.c: No longer XFAIL.

2000-12-01  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/execute/string-opt-5.c: Add some memset tests.

2000-12-01  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/cast6.C: New test.

2000-11-30  Geoffrey Keating  <geoffk@redhat.com>

	* gcc.c-torture/execute/20001130-2.c: New testcase.

2000-11-30  Richard Henderson  <rth@redhat.com>

	* gcc.c-torture/execute/20001130-1.c: New test.

2000-11-30  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/op3.C: New test.

2000-11-30  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/op2.C: New test.

2000-11-30  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/crash38.C: New test.

2000-11-29  Toon Moene  <toon@moene.indiv.nluug.nl>

	* g77.f-torture/execute/20001111.x: Test fixed - remove XFAIL.

2000-11-29  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/execute/string-opt-5.c: Add some strcmp and strncpy
	tests.
	* gcc.c-torture/execute/string-opt-6.c: New test.

	* gcc.dg/20001117-1.c: Add main.

2000-11-28  Geoffrey Keating  <geoffk@redhat.com>

	* gcc.dg/noncompile/940510-1.c: Update to test c89 functionality.
	Move from here ...
	* gcc.dg/940510-1.c: ... to here.

	* gcc.dg/20000926-1.c: GNU C now allows initializations of
	zero-size arrays in toplevel structures.

2000-11-28  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/execute/loop-8.c: New test.

2000-11-28  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/base1.C: New test.

2000-11-28  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/parse2.C: New test.

2000-11-28  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.pt/incomplete1.C: New test.

2000-11-28  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/friend9.C: New test.

2000-11-28  Jakub Jelinek  <jakub@redhat.com>
